[package]
name = "rio-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "NAR content-addressable store for rio-build"

[[bin]]
name = "rio-store"
path = "src/main.rs"

[dependencies]
rio-common = { workspace = true }
rio-nix = { workspace = true }
rio-proto = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# gRPC
tonic = { workspace = true }
tokio-stream = { workspace = true }
# grpc.health.v1.Health for K8s readiness probes. SERVING after PG
# migrations complete — before that, every store RPC would fail.
tonic-health = { workspace = true }
# Streaming zstd for the cache_server /nar/ route. Replaces buffered
# encode_all (4GB peak for 4GB NAR) with O(chunk*K) pipeline.
async-compression = { workspace = true }
# StreamReader (Stream<Bytes> → AsyncRead) + ReaderStream (AsyncRead
# → Stream<Bytes>). The round-trip lets zstd sit in the middle.
tokio-util = { workspace = true }

# Database
sqlx = { workspace = true }
# Per-tenant accounting (gc/tenant.rs) + cache_server auth extension.
uuid = { workspace = true }

# S3
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

# Byte buffers
bytes = { workspace = true }

# Crypto
sha2 = { workspace = true }
# narinfo signing. Signatures are computed at PutPath time and stored
# in narinfo.signatures so the HTTP cache server never touches the privkey.
ed25519-dalek = { workspace = true }
base64 = { workspace = true }

# Binary cache HTTP server. axum for routing. We store uncompressed
# chunks for dedup and zstd-compress at serve time via async-compression.
axum = { workspace = true }

# Phase 2c chunked CAS
fastcdc = { workspace = true }
blake3 = { workspace = true }
# join_all for bounded-parallel S3 HeadObject batches (exists_batch).
# Worker already uses this; not a new transitive dep.
futures-util = { workspace = true }
# In-process chunk cache. Lock-free, weight-based eviction — tracks
# byte-size per entry so the 2GB cap is a real memory bound, not just
# an entry count.
moka = { workspace = true }
# Singleflight: DashMap<hash, Shared<JoinHandle>> tracks in-flight
# backend fetches so N concurrent GetPaths for the same chunk issue
# one S3 GET, not N.
dashmap = { workspace = true }

# Encoding
hex = { workspace = true }

# CLI
clap = { workspace = true }

# Logging & metrics
tracing = { workspace = true }
metrics = { workspace = true }

# TLS cert parsing for CN-based HMAC bypass on PutPath. tonic's
# peer_certs() gives DER bytes; we parse to read subject CN.
# Only CN=rio-gateway bypasses HMAC (not any mTLS client).
x509-parser = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# Advisory lock RAII: detach PoolConnection on ANY exit (including
# cancel) so PG session-scoped lock auto-releases. Round 4 Z2/Z7.
scopeguard = { workspace = true }

# Config
serde = { workspace = true }

[dev-dependencies]
rio-test-support = { workspace = true }
# Sync decode_all for cache_server round-trip tests — verify the
# async-compression stream produces valid zstd.
zstd = { workspace = true }
tempfile = { workspace = true }
# In-memory cert generation for cert_cn() unit tests (CN parsing).
rcgen = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tokio-stream = { workspace = true, features = ["net"] }
aws-smithy-mocks = { workspace = true }
aws-sdk-s3 = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
# For cache_server tests: Router::oneshot (ServiceExt trait).
tower = { workspace = true, features = ["util"] }
# For main.rs ChunkBackendKind TOML + env-var parsing tests. The
# production code uses figment via rio_common::config::load. dev-dep
# here for Toml::string + Jail (env manipulation under global mutex).
figment = { workspace = true, features = ["test"] }
# For log-assertion tests (maybe_sign warn on empty refs).
tracing-test = { workspace = true }

[build-dependencies]
# build.rs greps metric-emit literals for the emit→describe check.
# Already transitive in Cargo.lock; zero new lockfile churn.
regex = { workspace = true }
