[package]
name = "rio-test-support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Test harness: ephemeral PostgreSQL, wire protocol helpers, mock gRPC services"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
rio-nix = { workspace = true }
rio-proto = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
# spawn_mock_store_inproc: in-process duplex transport so
# `#[tokio::test(start_paused = true)]` doesn't auto-advance timeouts
# while real TCP is pending.
tower = { workspace = true }
hyper-util = { workspace = true }
# kube_mock: scenario-driven mock apiserver via tower-test
# mock::pair() wrapped as kube::Client. Shared by rio-controller
# reconciler tests and rio-scheduler lease election tests.
tower-test = { workspace = true }
http = { workspace = true }
# http-body-util: BodyExt::collect for draining the request body
# in kube_mock's body_contains assertion. kube::client::Body is
# a hyper-style stream; .collect().to_bytes() flattens it.
http-body-util = { workspace = true }
kube = { workspace = true }
# metrics: DescribedNames + CountingRecorder test recorders.
# Extracted from 5× + 3× per-crate copies (P0330).
metrics = { workspace = true }
# rand_store_hash(): fresh nixbase32 hash per call. Criterion-driven
# benches need unique drv_hash across iterations (scheduler DAG
# dedupes, collisions skew latency low).
rand = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true, features = ["process", "signal"] }

[dev-dependencies]
# kube_mock's verifier_roundtrip test needs a concrete k8s type
# (Pod) and serde_json for the response body fixture.
k8s-openapi = { workspace = true }
serde_json = { workspace = true }
# metrics_grep self-test compiles the include!()-ed helper as a
# cfg(test) module to unit-test grep_spec_names. emit_metrics_grep
# (unused in the test, but compiled) references regex::Regex.
regex = { workspace = true }
