[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Internal
# default-features = false: only pg::PgServer (for `regen sqlx`); skips
# rio-nix/rio-proto/tonic/kube/tower-test which `full` would pull. Direct
# path (not workspace = true) because workspace-inherited deps can't
# override default-features.
rio-test-support = { path = "../rio-test-support", default-features = false }
rio-crds.workspace = true
# `sla::FLEET_MEDIAN_MIN_TENANTS` for `k8s sla-gates` seed loop
# (bug_016: hardcoded `0..3` left the per-dim trust gate unsatisfied).
rio-scheduler.workspace = true

# CLI + config
clap = { workspace = true, features = ["derive", "env"] }
clap-verbosity-flag.workspace = true
figment = { workspace = true, features = ["env"] }
dotenvy.workspace = true

# Async
tokio = { workspace = true, features = ["full"] }
futures-util.workspace = true
async-trait.workspace = true

# gRPC (qa scenarios: i026 health probe)
tonic = { workspace = true, features = ["transport"] }
tonic-health.workspace = true

# Shell-out
xshell.workspace = true

# Git
gix.workspace = true

# AWS
aws-config.workspace = true
aws-sdk-ec2.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sts.workspace = true
aws-sdk-ecr.workspace = true
aws-sdk-elasticloadbalancingv2.workspace = true

# Kubernetes
kube = { workspace = true, features = ["runtime", "client", "ws"] }
k8s-openapi.workspace = true

# HTTP
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true

# Crypto / encoding
sha2.workspace = true
hex.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
ssh-key = { workspace = true, features = ["ed25519", "rand_core"] }
rand.workspace = true

# UI
console.workspace = true
inquire.workspace = true
jiff.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
human-panic.workspace = true

# Error handling
anyhow.workspace = true

# Utility
sqlx.workspace = true
tempfile.workspace = true
scopeguard.workspace = true
nix = { workspace = true, features = ["process", "signal"] }
rustls.workspace = true
regex.workspace = true
filetime.workspace = true
