[package]
name = "rio-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rio-common = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
tonic = { workspace = true }
zstd = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
openraft = { workspace = true }
rocksdb = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
backon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
