[package]
name = "rio-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rio-common = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
tonic = { workspace = true }
zstd = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
