[package]
name = "rio-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rio-builder"
path = "src/main.rs"

[dependencies]
rio-common = { path = "../rio-common" }

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

# gRPC client
tonic = { workspace = true }
prost = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
bytes = { workspace = true }
hostname = { workspace = true }
num_cpus = { workspace = true }

# CLI
clap = { workspace = true }
