[package]
name = "rio-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
