[package]
name = "rio-dispatcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rio-dispatcher"
path = "src/main.rs"

[lib]
name = "rio_dispatcher"
path = "src/lib.rs"

[dependencies]
rio-common = { path = "../rio-common" }

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = "0.1"
futures-util = { workspace = true }

# gRPC server
tonic = { workspace = true }
prost = { workspace = true }

# SSH server
russh = { workspace = true }
rand_core = { workspace = true }

# Nix protocol
nix-daemon = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }

# CLI
clap = { workspace = true }

[dev-dependencies]
tokio-stream = "0.1"
tempfile = "3.14"
