[package]
name = "rio-nix-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rio-nix = { path = ".." }
tokio = { version = "1", features = ["rt", "io-util"] }

[[bin]]
name = "wire_primitives"
path = "fuzz_targets/wire_primitives.rs"
test = false
doc = false

[[bin]]
name = "opcode_parsing"
path = "fuzz_targets/opcode_parsing.rs"
test = false
doc = false

[[bin]]
name = "derivation_parsing"
path = "fuzz_targets/derivation_parsing.rs"
test = false
doc = false

[[bin]]
name = "nar_parsing"
path = "fuzz_targets/nar_parsing.rs"
test = false
doc = false

[[bin]]
name = "derived_path_parsing"
path = "fuzz_targets/derived_path_parsing.rs"
test = false
doc = false

[[bin]]
name = "narinfo_parsing"
path = "fuzz_targets/narinfo_parsing.rs"
test = false
doc = false
