[package]
name = "rio-nix-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

# This crate is its own workspace root. It's excluded from the parent
# workspace (../../Cargo.toml) but has its own Cargo.lock so Nix can
# vendor its deps independently.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
rio-nix = { path = ".." }
tempfile = "3"
tokio = { version = "1", features = ["rt", "io-util"] }

[[bin]]
name = "wire_primitives"
path = "fuzz_targets/wire_primitives.rs"
test = false
doc = false

[[bin]]
name = "opcode_parsing"
path = "fuzz_targets/opcode_parsing.rs"
test = false
doc = false

[[bin]]
name = "derivation_parsing"
path = "fuzz_targets/derivation_parsing.rs"
test = false
doc = false

[[bin]]
name = "nar_parsing"
path = "fuzz_targets/nar_parsing.rs"
test = false
doc = false

[[bin]]
name = "derived_path_parsing"
path = "fuzz_targets/derived_path_parsing.rs"
test = false
doc = false

[[bin]]
name = "narinfo_parsing"
path = "fuzz_targets/narinfo_parsing.rs"
test = false
doc = false

[[bin]]
name = "build_result_parsing"
path = "fuzz_targets/build_result_parsing.rs"
test = false
doc = false

[[bin]]
name = "refscan"
path = "fuzz_targets/refscan.rs"
test = false
doc = false

[[bin]]
name = "stderr_message_parsing"
path = "fuzz_targets/stderr_message_parsing.rs"
test = false
doc = false
